<resources>
    <string name="app_name" translatable="false">To-do List</string>
    <string name="current_tasks">%1$d current tasks</string>
    <string name="current_task">%1$d current task</string>
    <string name="no_current_task">No current task</string>
    <string name="add_a_task">Add a task</string>
    <string name="settings">Settings</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="activate">Activate</string>
    <string name="error_while_getting_tasks">Error while getting tasks</string>
    <string name="undo">Undo</string>
    <string name="deleted_task">Deleted task</string>
    <string name="error_while_adding_task">Error while adding task</string>
    <string name="error_while_deleting_task">Error while deleting task</string>
    <string name="edit_task">Edit task</string>
    <string name="created_by">Created by %1$S \nThe %2$S at %3$S</string>
    <string name="copy">Copy</string>
    <string name="task_copied">Task copied !</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="share_room_code">Share room code</string>
    <string name="add_some_text_here">Add some text here</string>
    <string name="add">Add</string>
    <string name="your_name">Your name</string>
    <string name="welcome">Welcome !</string>
    <string name="what_s_your_name">What\'s your name ?</string>
    <string name="ok">OK</string>
    <string name="general">General</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="name">Name</string>
    <string name="room">Room</string>
    <string name="count_users_who_added_task">%1$d people added a task</string>
    <string name="users_in_this_room">Users in this room</string>
    <string name="view_people_who_added_task">View person who added task</string>
    <string name="receive_notification_when_people_add_task">Receive notification when people add task</string>
    <string name="generate_new_room_code">Generate new random room code</string>
    <string name="no_user_added_a_task">No user added a task</string>
    <string name="sort_by">Sort by</string>
    <string name="date">date</string>
    <string name="creator">creator</string>
    <string name="sort">Sort</string>
    <string name="search">Search ...</string>
    <string name="room_code">Room code</string>
    <string name="description">description</string>
    <string name="background_color">Background color</string>
    <string name="text_color">Text color</string>
</resources>