<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">
        <EditTextPreference
            app:key="name"
            app:title="Your name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="room"
            app:title="Your room"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notification"
            android:title="Receive notification when people add task" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/about">
        <PreferenceScreen
            android:key="version"
            android:summary="1.0"
            android:title="@string/version" />

        <PreferenceScreen
            android:key="developer"
            android:summary="Alexandre Vernet"
            android:title="@string/developer" />
    </PreferenceCategory>

</PreferenceScreen>