<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Floating Action Button-->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:icon="@drawable/plus" />

    <!--Add a task-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="140dp"
        android:contentDescription="@string/add_a_task"
        app:fabSize="normal"
        app:srcCompat="@drawable/add" />


    <!--Share room code-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="90dp"
        android:contentDescription="@string/share_room_code"
        app:fabSize="normal"
        app:srcCompat="@drawable/share" />


    <!--Settings-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/settings"
        app:fabSize="normal"
        app:srcCompat="@drawable/settings" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>